# RxQmlTest

./: CMakeLists.txt
src/: Controler.cpp  Controler.h  main.cpp
src/qml/: main.qml
